--- a/example_notebook/conEstimation_PMI_envelop_delay.ipynb
+++ b/example_notebook/conEstimation_PMI_envelop_delay.ipynb
@@ -548,34 +548,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
+       "\t<li>FALSE</li>\n",
        "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
+       "\\item FALSE\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
+       "1. FALSE\n",
+       "2. FALSE\n",
+       "3. FALSE\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 1 2 3"
+       "[1] FALSE FALSE FALSE"
       ]
      },
      "metadata": {},
@@ -583,18 +583,20 @@
     }
    ],
    "source": [
-    "x = c(1,2,3,4,5,6,7,8,9)\n",
-    "ndemb = 3 \n",
-    "gapfree = stats::na.omit(sapply(1:(length(x)-ndemb + 1), FUN = function(y) if(!any(is.na(x[y:(y+ndemb-1)]))) return(y) else return(NA)))\n",
-    "# gapfree = the onset index for vector x\n",
-    "# 1:(length(x)-ndemb + 1): possible index, maybe contains NA\n",
-    "# We will not have NA, so we could ignore that in the reimplementation\n",
-    "npdim=factorial(ndemb)\n",
-    "ifrec = numeric(length=npdim)\n",
+    "# x = c(1,2,3,4,5,6,7,8,9)\n",
+    "# ndemb = 3 \n",
+    "# gapfree = stats::na.omit(sapply(1:(length(x)-ndemb + 1), FUN = function(y) if(!any(is.na(x[y:(y+ndemb-1)]))) return(y) else return(NA)))\n",
+    "# # gapfree = the onset index for vector x\n",
+    "# # 1:(length(x)-ndemb + 1): possible index, maybe contains NA\n",
+    "# # We will not have NA, so we could ignore that in the reimplementation\n",
+    "# npdim=factorial(ndemb)\n",
+    "# ifrec = numeric(length=npdim)\n",
     "\n",
-    "for (nv in 1:(length(gapfree))) {    \n",
-    "    xvec <- x[gapfree[nv]:(gapfree[nv] + ndemb - 1)]}\n",
-    "gapfree[1]:(gapfree[1] + ndemb - 1)"
+    "# for (nv in 1:(length(gapfree))) {    \n",
+    "#     xvec <- x[gapfree[nv]:(gapfree[nv] + ndemb - 1)]}\n",
+    "# gapfree[1]:(gapfree[1] + ndemb - 1)\n",
+    "\n",
+    "vector(length=3)"
    ]
   },
   {
