why git needs my token

--- a/example_notebook/prep_iVCrctg_ready4package.ipynb
+++ b/example_notebook/prep_iVCrctg_ready4package.ipynb
@@ -25,7 +25,7 @@
     "- iMC vs iVC, we see discontinuous EMG during iVC, so EMG envelop might be a compromised method. iMC paradigm is suitable for diagnosis. This concern can be addressed with muscle activation (smoother)\r\n",
     "## Notes\r\n",
     "- Channel 0-7 are valided EMG chs for most of the subjects. In some case, the recorded channels were not 0-7 because of technical hitches during the exp (subj56,57).\r\n",
-    "# check git fcs\r\n"
+    "# check git fcs unsolved\r\n"
    ],
    "metadata": {}
   },
